@@ -1,7 +1,7 @@
 /*
  * SPDX-License-Identifier: BSD-3-Clause
  * Copyright © 2009 CNRS
- * Copyright © 2009-2025 Inria.  All rights reserved.
+ * Copyright © 2009-2026 Inria.  All rights reserved.
  * Copyright © 2009-2013 Université Bordeaux
  * Copyright © 2009-2020 Cisco Systems, Inc.  All rights reserved.
  * Copyright © 2020 Hewlett Packard Enterprise.  All rights reserved.
@@ -1277,6 +1277,13 @@ following environment variables.
   This is enabled by default on NVIDIA Grace but may be disabled
   if set to 0 (or enabled on other platforms if set to 1).
   </dd>
+
+<dt>HWLOC_LINUX_CPUKINDS=-1</dt>
+  <dd>Try to enable the discovery of CPU kinds on Linux.
+  This is enabled by default except on old AMD CPUs known to be homogeneous.
+  Setting to <tt>1</tt> always enables it, while <tt>0</tt> always disables it.
+  </dd>
+
 
 </dl>
 
